--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
+  },
+  "engines": {
+    "node": "10.5.0",
+    "yarn": "1.7.0"
   }
 }
