--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "uikit": "^3.0.0-rc.6"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.12.0",
     "webpack-dev-server": "2.11.2"
   },
   "engines": {
