--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,8 @@
 MALLOC_ARENA_MAX: '2'
 
 development:
+  WEB_CONCURRENCY: '0'
+
   REDIS_URL: 'redis://localhost:6379/1'
 
   SMTP_USERNAME: <%= Rails.application.credentials[:mailtrap][:username] %>
