chore: enable heroku review app (#76)

--- a/app.json
+++ b/app.json
@@ -75,12 +75,8 @@
   },
   "addons": [
     "mailtrap",
-    "newrelic",
     "heroku-postgresql",
-    "heroku-redis",
-    "scheduler",
-    "sentry",
-    "sqreen"
+    "heroku-redis"
   ],
   "buildpacks": [
     {
