feat: use maildev in development instead of staging mailtrap (#78)

--- a/config/application.yml
+++ b/config/application.yml
@@ -5,8 +5,5 @@ development:
 
   REDIS_URL: 'redis://localhost:6379/1'
 
-  SMTP_USERNAME: <%= Rails.application.credentials[:mailtrap][:username] %>
-  SMTP_PASSWORD: <%= Rails.application.credentials[:mailtrap][:password] %>
-  SMTP_DOMAIN: 'smtp.mailtrap.io'
-  SMTP_ADDRESS: 'smtp.mailtrap.io'
-  SMTP_PORT: '2525'
+  SMTP_ADDRESS: 'localhost'
+  SMTP_PORT: '1025'
