--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,10 @@ services:
       POSTGRES_USER: ${USER}
     volumes:
       - ${PWD}/db:${PWD}/db
+  maildev:
+    container_name: recipy_maildev
+    image: djfarrelly/maildev:latest
+    ports:
+      - '127.0.0.1:1080:80'
+      - '127.0.0.1:1025:25'
+
