--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 
 before_install:
   - nvm install
-  - npm install -g yarn@`$(jq -r '.engines.yarn' package.json)`
+  - npm install -g yarn@"$(jq -r '.engines.yarn' package.json)"
 
 install:
   - bundle install --deployment --without development production
@@ -22,8 +22,7 @@ before_script:
   - sudo service postgresql stop
   - sudo service redis-server stop
   - docker-compose up --build -d
-  - bundle exec rake db:create
-  - bundle exec rake db:migrate
+  - bundle exec rake db:setup
   - bundle exec rake assets:precompile
 
 script: bundle exec rspec
