fix: skip verify_authenticity_token in API call (#102)

--- a/config/application.yml
+++ b/config/application.yml
@@ -7,3 +7,9 @@ development:
 
   SMTP_ADDRESS: 'localhost'
   SMTP_PORT: '1025'
+
+  DEFAULT_URL_HOST: 'localhost'
+
+test:
+  DEFAULT_URL_HOST: 'localhost'
+
