--- a/app.json
+++ b/app.json
@@ -4,65 +4,14 @@
     "postdeploy": "bundle exec rake db:schema:load db:seed"
   },
   "env": {
-    "HEROKU_APP_ID": {
-      "required": true
-    },
     "HEROKU_APP_NAME": {
-      "required": true
-    },
-    "HEROKU_RELEASE_CREATED_AT": {
-      "required": true
-    },
-    "HEROKU_RELEASE_VERSION": {
-      "required": true
-    },
-    "HEROKU_SLUG_COMMIT": {
-      "required": true
-    },
-    "HEROKU_SLUG_DESCRIPTION": {
-      "required": true
-    },
-    "LANG": {
-      "required": true
-    },
-    "MAILTRAP_API_TOKEN": {
-      "required": true
-    },
-    "RACK_ENV": {
-      "required": true
-    },
-    "RAILS_ENV": {
-      "required": true
-    },
-    "RAILS_LOG_TO_STDOUT": {
       "required": true
     },
     "RAILS_MASTER_KEY": {
       "required": true
     },
-    "RAILS_SERVE_STATIC_FILES": {
-      "required": true
-    },
-    "REDIS_URL": {
-      "required": true
-    },
     "SECRET_KEY_BASE": {
-      "required": true
-    },
-    "SMTP_ADDRESS": {
-      "required": true
-    },
-    "SMTP_DOMAIN": {
-      "required": true
-    },
-    "SMTP_PASSWORD": {
-      "required": true
-    },
-    "SMTP_PORT": {
-      "required": true
-    },
-    "SMTP_USERNAME": {
-      "required": true
+      "generator": "secret"
     }
   },
   "formation": {
