chore: huge update of sprint #2

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,5 +1,12 @@
 MALLOC_ARENA_MAX: '2'
 
+FACEBOOK_KEY: '<%= Rails.application.credentials[:omniauth][:facebook][:key] %>'
+FACEBOOK_SECRET: '<%= Rails.application.credentials[:omniauth][:facebook][:secret] %>'
+TWITTER_KEY: '<%= Rails.application.credentials[:omniauth][:twitter][:key] %>'
+TWITTER_SECRET: '<%= Rails.application.credentials[:omniauth][:twitter][:secret] %>'
+GOOGLE_KEY: '<%= Rails.application.credentials[:omniauth][:google][:key] %>'
+GOOGLE_SECRET: '<%= Rails.application.credentials[:omniauth][:google][:secret] %>'
+
 development:
   WEB_CONCURRENCY: '0'
 
@@ -12,4 +19,3 @@ development:
 
 test:
   DEFAULT_URL_HOST: 'localhost'
-
