--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "dependencies": {
     "@rails/webpacker": "3.5.5",
     "mjml": "^4.2.0",
+    "node": "^11.0.0",
     "stimulus": "^1.0.1",
-    "uikit": "^3.0.0-rc.11"
+    "uikit": "^3.0.0-rc.11",
+    "yarn": "^1.12.3"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "webpack-dev-server": "2.11.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.0.0"
   },
   "engines": {
     "node": "11.0.0",
