--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "node": "^11.0.0",
     "stimulus": "^1.0.1",
     "uikit": "^3.0.0-rc.11",
-    "yarn": "^1.12.3"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.4.1",
+    "yarn": "^1.12.1"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.0.0"
+    "webpack-cli": "^3.1.2"
   },
   "engines": {
     "node": "11.0.0",
