--- a/config/application.yml
+++ b/config/application.yml
@@ -10,5 +10,8 @@ development:
 
   DEFAULT_URL_HOST: '127.0.0.1'
 
+  FACEBOOK_APP_ID: '2316701675039290'
+  FACEBOOK_APP_SECRET: '43b315bd52d65c09e7b9d2953d25709e'
+
 test:
   DEFAULT_URL_HOST: 'localhost'
