fix: new line in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
   - npm install -g yarn@"$(jq -r '.engines.yarn' package.json)"
 
 install:
+  - gem install bundler
   - bundle install --deployment --without development production
   - yarn install --production
 
