Notebook | Problème de front (#275)
* feat: meal & meal_plan

* feat: meal & meal_plan

* feat: front

* fix: controller wrong include

* fix: problem with development build

* fix: new line in travis.yml

* fix: before install bundler in travis.yml

* fix: workaround with bundler in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
 before_install:
   - nvm install
   - npm install -g yarn@"$(jq -r '.engines.yarn' package.json)"
+  - gem install bundler -v '2.0.1'
 
 install:
   - bundle install --deployment --without development production
