--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/gcs.json
 /public/packs
 /public/packs-test
 /node_modules
