--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "uikit": "^3.0.0-rc.11",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.4.1",
-    "yarn": "1.13.0"
+    "yarn": "^1.19.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
